--- a/src/app/modules/dish/components/add-dish/add-dish.component.html
+++ b/src/app/modules/dish/components/add-dish/add-dish.component.html
@@ -1,5 +1,9 @@
 <div class="container">
-	<div class="card">
+	<div 
+	[ngClass] = "{
+		'bg-dark text-light': theme$ | async
+	}"
+	class="card">
 		<div class="card-header">
 		New Dish
 		</div>
