--- a/src/app/modules/dish/components/menu/menu.component.html
+++ b/src/app/modules/dish/components/menu/menu.component.html
@@ -1,5 +1,7 @@
  <div class="container">
-	<div class="row mb-2">
+	<div 
+	class="row mb-2"
+	>
 		<div class="col-md-2">Find by name:</div>
 		<div class="col-md-4">
 			<input class="form-control" type="text"
@@ -8,9 +10,16 @@
 		</div>
 	</div>
 	<div *ngIf = "filteredDishes$ | async as filteredDishes" class="table-responsive">
-		<table class="table table-striped table-hover">
+		<table class="table table-striped table-hover"
+		[ngClass]="{
+			'table-dark': theme$ | async
+		}"
+		>
 			<thead>
-				<tr class="table-primary">
+				<tr [ngClass]="{
+					'table-light': (theme$ | async) == false,
+					'table-dark': theme$ | async
+				}">
 					<th>Dish</th>
 					<th>Name</th>
 					<th>Category</th>
