--- a/src/app/modules/dish/components/dish-detail/dish-detail.component.html
+++ b/src/app/modules/dish/components/dish-detail/dish-detail.component.html
@@ -54,8 +54,8 @@
 					>
 					</app-star>
 				</td>
-				<td>{{comment.author | capitalize}}</td>
-				<td>{{comment.date}}</td>
+				<td>{{comment.author.first_name | capitalize}}</td>
+				<td>{{comment.author.last_name}}</td>
 			</tr>
 		</tbody>
 	</table>
