--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <div 
 [ngClass] = "{
-	'bg-dark text-light' : theme$ | async
+	'bg-dark text-light' : darkTheme
 }"
 class="card">
   <div class="card-header">
@@ -8,11 +8,6 @@ class="card">
   </div>
   <div class="card-body">
     <div class="container-fluid">
-      <div class="text-center">
-        <img src="../../assets/images/logo.png"
-             class="img-responsive center-block"
-             style="max-height:300px;padding-bottom:50px" />
-      </div>
       <div class="text-center">Developed by:</div>
       <div class="text-center">
         <h3>Ritik Singla</h3>
