--- a/src/app/modules/dish/components/menu/menu.component.html
+++ b/src/app/modules/dish/components/menu/menu.component.html
@@ -10,22 +10,21 @@
 		</div>
 	</div>
 	<div *ngIf = "filteredDishes$ | async as filteredDishes" class="table-responsive">
-		<table class="table table-striped table-hover"
+		<table class="table"
 		[ngClass]="{
-			'table-dark': theme$ | async
+			'table-dark': darkTheme
 		}"
 		>
 			<thead>
 				<tr [ngClass]="{
-					'table-light': (theme$ | async) == false,
-					'table-dark': theme$ | async
+					'table-light': darkTheme == false,
+					'table-dark': darkTheme
 				}">
 					<th>Dish</th>
 					<th>Name</th>
 					<th>Category</th>
 					<th>Price</th>
 					<th>Description</th>
-					<th>Average Rating</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -36,19 +35,20 @@
 					<td>
 						<img [src]='dish.imageUrl'
 						[title]='dish.name'
-						class="img-fluid" 
+						class="img-fluid"
+						style="width: 25%;"
 						>
 					</td>
 					<td>{{dish.name | uppercase}}</td>
 					<td>{{dish.category | capitalize}}</td>
 					<td>{{dish.price | currency:'USD':'symbol':'1.2-2'}}</td>
 					<td>{{dish.description}}</td>
-					<td>
+					<!-- <td>
 						<app-star
-						[rating]='dish.starRating'
+						[rating]='dish.averageRating'
 						>
 						</app-star>
-					</td>
+					</td> -->
 				</tr>
 			</tbody>
 		</table>
