reactively configured filter input and deactivate guard added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,28 @@
 	'navbar navbar-expand mb-3': true,
 	'navbar-light bg-light': (darkTheme == false),
 	'navbar-dark bg-dark' : darkTheme
-}">
+	}">
 	<div class="container-fluid">
-    	<div class="navbar-header">
+		<div class="navbar-header">
 			<a class="navbar-brand" routerLink='/welcome'>{{pageTitle}}</a>
 		</div>
 		<ul class="nav nav-pills align-items-baseline">
-			<li class="nav-item"><a class="nav-link" [routerLink]="auth ? ['/menu'] : ['/user/login']">{{auth?'Menu':'Login'}}</a></li>
-			<li class="nav-item"><a class="nav-link" [routerLink]="auth ? ['/menu/add'] : ['/user/register']">{{auth?'Add Dish':'Register'}}</a></li>
-			<li *ngIf="auth" class="nav-item"><a (click)="logout()" style="cursor: pointer;" class="nav-link">Logout</a></li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="auth ? ['/menu'] : ['/user/login']" routerLinkActive="active"
+				[routerLinkActiveOptions] = "{exact:true}"
+				>{{auth?'Menu':'Login'}}
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" [routerLink]="auth ? ['/menu/add'] : ['/user/register']" routerLinkActive="active">
+					{{auth?'Add Dish':'Register'}}
+				</a>
+			</li>
+			<li *ngIf="auth" class="nav-item">
+				<a class="nav-link" routerLink="/profile" routerLinkActive="active">
+					Profile
+				</a>
+			</li>
 			<li class="nav-item">
 				<a style="cursor: pointer;" (click) = "onClick()" class="nav-link fa fa-sun-o"></a>
 			</li>
