--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,8 +1,7 @@
 <div 
 [ngClass] = "{
 	'bg-dark text-light' : darkTheme
-}"
-class="card">
+}" class="card" style="height: 100%;">
   <div class="card-header">
     {{pageTitle}}
   </div>
